--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.15.3"
+    "sweetalert2": "^11.15.3",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
