--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-photo-album": "^3.0.2",
     "react-router-dom": "^7.1.1",
+    "react-router-hash-link": "^2.4.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.3",
     "swiper": "^11.1.15",
